# PAGE

./: .CMakeLists.txt.swp  .cproject  .project  CMakeCache.txt  CMakeLists.txt  LightingNotes  LightingNotes.txt  Makefile  OpenGL_Notes.txt  PAGE.cbp  PAGE.layout  PAGE.out  README  cmake_install.cmake  code.c  uberlight_uniforms.txt
animations/: bendy_bar-bend.egg
cmake/: FindXRandR.cmake
include/: page_animation.h  page_animationjoint.h  page_debug.h  page_dof.h  page_graphics.h  page_joint.h  page_matrix.h  page_mesh.h  page_parser.h  page_texture.h  page_transform.h  page_utility.h  page_vector.h  page_window.h
models/: bendy_bar.egg  panda-model.tga  panda.egg
shaders/: diffuse.fs  diffuse.vs  panda.fs  panda.vs  uberlight.fs  uberlight.vs
src/: main.cpp  page_animation.cpp  page_animationjoint.cpp  page_debug.cpp  page_dof.cpp  page_graphics.cpp  page_graphics.cpp~  page_joint.cpp  page_matrix.cpp  page_mesh.cpp  page_parser.cpp  page_texture.cpp  page_transform.cpp  page_utility.cpp  page_window.cpp
