CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT (PAGE)

SET(PAGE_VERSION_MAJOR 0)
SET(PAGE_VERSION_MINOR 1)
INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}")

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PAGE_SOURCE_DIR}/cmake )

AUX_SOURCE_DIRECTORY("./src" SOURCES)

INCLUDE_DIRECTORIES("./include")

SET(EXECUTABLE_NAME "PAGE.out")
ADD_EXECUTABLE(${EXECUTABLE_NAME} ${SOURCES})

FIND_PACKAGE( GLFW REQUIRED )
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${GLFW_LIBRARIES})

FIND_PACKAGE( OpenGL REQUIRED )
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${OPENGL_LIBRARIES})

FIND_PACKAGE( GLEW REQUIRED )
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_PATH})
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${GLEW_LIBRARY})

FIND_PACKAGE( Threads )
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${CMAKE_THREAD_LIBS_INIT})

FIND_PACKAGE( X11 )
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${X11_LIBRARY})

FIND_PACKAGE ( XRandR )
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${XRandR_LIBRARY})

INSTALL(TARGETS ${EXECUTABLE_NAME} DESTINATION bin)
